// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`badges.js Test 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
    }
  }
>
  <View>
    <View
      style={
        {
          "margin": 20,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            {
              "color": "#FFD700",
            },
          ]
        }
      >
        Badge 1
      </Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 100,
            },
            {
              "color": "#FFD700",
            },
            {
              "fontFamily": "material-community",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        󱗇
      </Text>
    </View>
    <View
      style={
        {
          "margin": 20,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            {
              "color": "#FFD700",
            },
          ]
        }
      >
        Badge 2
      </Text>
      <Text />
    </View>
    <View
      style={
        {
          "margin": 20,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            {
              "color": "#FFD700",
            },
          ]
        }
      >
        Badge 3
      </Text>
      <Text />
    </View>
    <View
      style={
        {
          "margin": 20,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            {
              "color": "#FFD700",
            },
          ]
        }
      >
        Badge 4
      </Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 100,
            },
            {
              "color": "#FFD700",
            },
            {
              "fontFamily": "entypo",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        {
          "margin": 20,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            {
              "color": "#FFD700",
            },
          ]
        }
      >
        Badge 5
      </Text>
      <Text />
    </View>
    <View
      style={
        {
          "margin": 20,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            {
              "color": "#000000",
            },
          ]
        }
      >
        Badge 6
      </Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 100,
            },
            {
              "color": "#000000",
            },
            {
              "fontFamily": "entypo",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        {
          "margin": 20,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            {
              "color": "#000000",
            },
          ]
        }
      >
        Badge 7
      </Text>
      <Text />
    </View>
    <View
      style={
        {
          "margin": 20,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            {
              "color": "#000000",
            },
          ]
        }
      >
        Badge 8
      </Text>
      <Text />
    </View>
    <View
      style={
        {
          "margin": 20,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            {
              "color": "#000000",
            },
          ]
        }
      >
        Badge 9
      </Text>
      <Text />
    </View>
  </View>
</RCTScrollView>
`;

exports[`create-a-new-workout-preset.js Test 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#f1f1f1",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
          },
          {
            "marginBottom": 5,
            "marginLeft": 5,
            "marginRight": 5,
            "marginTop": 5,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 20,
              "lineHeight": 28,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Workout Name
      </Text>
      <TextInput
        onBlur={[Function]}
        onChangeText={[Function]}
        style={
          [
            {
              "textAlign": "center",
            },
            {
              "width": "91.666667%",
            },
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            {
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
            },
            {
              "backgroundColor": "#DEDEDE",
            },
          ]
        }
      />
      <Text
        style={
          [
            {
              "fontSize": 20,
              "lineHeight": 28,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Workout Notes
      </Text>
      <TextInput
        multiline={true}
        numberOfLines={3}
        onBlur={[Function]}
        onChangeText={[Function]}
        style={
          [
            {
              "textAlign": "center",
            },
            {
              "width": "91.666667%",
            },
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            {
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
            },
            {
              "backgroundColor": "#DEDEDE",
            },
          ]
        }
      />
      <Text
        style={
          [
            {
              "fontSize": 20,
              "lineHeight": 28,
            },
            {
              "marginTop": 30,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Exercises
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
            },
            {
              "display": "flex",
            },
            {
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#2296f3",
            "marginBottom": 5,
            "marginLeft": 5,
            "marginRight": 5,
            "marginTop": 5,
            "opacity": 1,
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontWeight": "700",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#f1f1f1",
              },
            ]
          }
        >
          Add Exercise
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#2296f3",
            "marginBottom": 5,
            "marginLeft": 5,
            "marginRight": 5,
            "marginTop": 5,
            "opacity": 1,
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontWeight": "700",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#f1f1f1",
              },
            ]
          }
        >
          Submit
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`create-workout.js Test 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#f1f1f1",
    }
  }
>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FF0000",
          "height": 80,
          "justifyContent": "center",
          "marginBottom": 20,
          "marginTop": 5,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "66.666667%",
        }
      }
    >
      <Text
        style={
          [
            {
              "fontWeight": "500",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Begin Empty Workout
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontSize": 24,
            "lineHeight": 32,
          },
          {
            "alignSelf": "center",
          },
          {
            "marginBottom": 40,
            "marginLeft": 40,
            "marginRight": 40,
            "marginTop": 40,
          },
          {
            "marginBottom": 20,
          },
        ]
      }
    >
      Workout Presets
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FF0000",
          "marginBottom": 20,
          "marginTop": 5,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "66.666667%",
        }
      }
    >
      <Text
        style={
          [
            {
              "fontWeight": "500",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Workout Preset 1
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FF0000",
          "marginBottom": 20,
          "marginTop": 5,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "66.666667%",
        }
      }
    >
      <Text
        style={
          [
            {
              "fontWeight": "500",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Workout Preset 2
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FF0000",
          "marginBottom": 20,
          "marginTop": 5,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "66.666667%",
        }
      }
    >
      <Text
        style={
          [
            {
              "fontWeight": "500",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Workout Preset 3
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FF0000",
          "marginBottom": 20,
          "marginTop": 5,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "66.666667%",
        }
      }
    >
      <Text
        style={
          [
            {
              "fontWeight": "500",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Workout Preset 4
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FF0000",
          "marginBottom": 20,
          "marginTop": 5,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": "66.666667%",
        }
      }
    >
      <Text
        style={
          [
            {
              "fontWeight": "500",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Workout Preset 5
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`index.js Test 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#f1f1f1",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    Open up App.js to start working on your app!
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#d10000",
        "bottom": 0,
        "color": "#060606",
        "display": "flex",
        "flex": 1,
        "flexDirection": "row",
        "height": "auto",
        "justifyContent": "space-evenly",
        "paddingBottom": "1%",
        "paddingTop": "1%",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <Text
      href="/"
      onPress={[Function]}
      role="link"
    >
      <Text />
    </Text>
    <Text
      href="/"
      onPress={[Function]}
      role="link"
    >
      <Text />
    </Text>
    <Text
      href="/"
      onPress={[Function]}
      role="link"
    >
      <Text />
    </Text>
    <Text
      href="/"
      onPress={[Function]}
      role="link"
    >
      <Text />
    </Text>
    <Text
      href="/"
      onPress={[Function]}
      role="link"
    >
      <Text />
    </Text>
  </View>
</View>
`;

exports[`log-workout.js Test 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#f1f1f1",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
          },
          {
            "marginBottom": 5,
            "marginLeft": 5,
            "marginRight": 5,
            "marginTop": 5,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 20,
              "lineHeight": 28,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Workout Name
      </Text>
      <TextInput
        onBlur={[Function]}
        onChangeText={[Function]}
        style={
          [
            {
              "textAlign": "center",
            },
            {
              "width": "91.666667%",
            },
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            {
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
            },
            {
              "backgroundColor": "#DEDEDE",
            },
          ]
        }
      />
      <Text
        style={
          [
            {
              "fontSize": 20,
              "lineHeight": 28,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Workout Notes
      </Text>
      <TextInput
        multiline={true}
        numberOfLines={3}
        onBlur={[Function]}
        onChangeText={[Function]}
        style={
          [
            {
              "textAlign": "center",
            },
            {
              "width": "91.666667%",
            },
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            {
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
            },
            {
              "backgroundColor": "#DEDEDE",
            },
          ]
        }
      />
      <Text
        style={
          [
            {
              "fontSize": 20,
              "lineHeight": 28,
            },
            {
              "marginTop": 30,
            },
            {
              "color": "#060606",
            },
          ]
        }
      >
        Exercises
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
            },
            {
              "display": "flex",
            },
            {
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#2296f3",
            "marginBottom": 5,
            "marginLeft": 5,
            "marginRight": 5,
            "marginTop": 5,
            "opacity": 1,
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontWeight": "700",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#f1f1f1",
              },
            ]
          }
        >
          Add Exercise
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#2296f3",
            "marginBottom": 5,
            "marginLeft": 5,
            "marginRight": 5,
            "marginTop": 5,
            "opacity": 1,
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontWeight": "700",
              },
              {
                "fontSize": 16,
              },
              {
                "color": "#f1f1f1",
              },
            ]
          }
        >
          Submit
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`set-goal.js Test 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#f1f1f1",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "alignItems": "center",
          },
          {
            "marginBottom": 5,
            "marginLeft": 5,
            "marginRight": 5,
            "marginTop": 5,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "marginRight": 16,
              },
              {
                "width": 64,
              },
            ]
          }
        >
          Name
        </Text>
        <TextInput
          onBlur={[Function]}
          onChangeText={[Function]}
          style={
            [
              {
                "textAlign": "center",
              },
              {
                "width": "91.666667%",
              },
              {
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "marginBottom": 10,
                "marginLeft": 10,
                "marginRight": 10,
                "marginTop": 10,
              },
              {
                "backgroundColor": "#DEDEDE",
              },
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "marginRight": 16,
              },
              {
                "width": 64,
              },
            ]
          }
        >
          Goal
        </Text>
        <TextInput
          onBlur={[Function]}
          onChangeText={[Function]}
          style={
            [
              {
                "textAlign": "center",
              },
              {
                "width": "91.666667%",
              },
              {
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "marginBottom": 10,
                "marginLeft": 10,
                "marginRight": 10,
                "marginTop": 10,
              },
              {
                "backgroundColor": "#DEDEDE",
              },
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "marginRight": 16,
              },
              {
                "width": 64,
              },
            ]
          }
        >
          Start Date
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#DEDEDE",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 8,
              "textAlign": "center",
              "width": "91.666667%",
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontWeight": "700",
                },
                {
                  "fontSize": 16,
                },
                {
                  "color": "#060606",
                },
              ]
            }
          >
            21/10/2024
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "marginRight": 16,
              },
              {
                "width": 64,
              },
            ]
          }
        >
          End Date
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#DEDEDE",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 8,
              "textAlign": "center",
              "width": "91.666667%",
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontWeight": "700",
                },
                {
                  "fontSize": 16,
                },
                {
                  "color": "#060606",
                },
              ]
            }
          >
            21/10/2024
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "marginRight": 16,
              },
              {
                "width": 64,
              },
            ]
          }
        >
          Reminder Date
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#DEDEDE",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "marginBottom": 10,
              "marginLeft": 10,
              "marginRight": 10,
              "marginTop": 10,
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 8,
              "textAlign": "center",
              "width": "91.666667%",
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontWeight": "700",
                },
                {
                  "fontSize": 16,
                },
                {
                  "color": "#060606",
                },
              ]
            }
          >
            21/10/2024
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "marginRight": 16,
              },
              {
                "width": 64,
              },
            ]
          }
        >
          Additional Notes
        </Text>
        <TextInput
          numberOfLines={5}
          onBlur={[Function]}
          onChangeText={[Function]}
          style={
            [
              {
                "textAlign": "center",
              },
              {
                "width": "91.666667%",
              },
              {
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "marginBottom": 10,
                "marginLeft": 10,
                "marginRight": 10,
                "marginTop": 10,
              },
              {
                "backgroundColor": "#DEDEDE",
              },
            ]
          }
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#FF0000",
            "marginTop": 15,
            "opacity": 1,
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontWeight": "700",
              },
              {
                "fontSize": 20,
                "lineHeight": 28,
              },
              {
                "color": "#060606",
              },
            ]
          }
        >
          Submit
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
